2002-04-09 Jeffrey W. Baker <jwbaker@acm.org>

    * Pg.pm, dbdimp.c: Applied patch from 
    Thomas A. Lowery <tlowery@stlowery.net> concerning metadata
    in table_info and so forth.
    
2002-03-06 Jeffrey W. Baker <jwbaker@acm.org>

    * Pg.pm (quote): Applied patch from David Wheeler <david@wheeler.net>
    to simplfiy and speed up quoting.

    * t/11quoting.t: Tests for above patch.
    
    * t/12placeholders.t: Tests for placeholder parsing in quoted strings.
    
2002-03-06 Jeffrey W. Baker

    * Version 1.10 uploaded to CPAN.
 
1.01 Jun 27, 2001
	- fixed core dump when trying to use a BYTEA value with
	  a byte outside 0..127  Alex Pilosov <alex@pilosoft.com>

1.00 May 27, 2001
	- Fetching all records now resets Active flag as it should.

0.99 May 24, 2001
	- fix the segmentation fault in pg_error.

0.98 Apr 25, 2001
	- bug-fix for core-dump after any failed function call.
	- applied patch from Alex Pilosov <alex@pilosoft.com> 
	  which adds support for the datatype bytea

0.97 Apr 20, 2001
	- fix bug in connect method, which erroneously set the userid
	  and the password to the environment variables DBI_USER and
	  DBI_PASS.
	- applied patch from Jan-Pieter Cornet <john@pc.xs4all.nl>,
	  which removed the special handling of a backslash when
	  used for octal presentation. Now a backslash always will
	  be escaped.

0.96 Apr 09, 2001
	- remove memory-leak in ping function, bug-fix
	  from Doug Perham <dperham@wgate.com>
	- correct the recognition of primary keys in 
	  table_attributes(). Patch from Brian Powell 
	  <brian@nicklebys.com>.
	- applied patch from David D. Kilzer <ddkilzer@lubricants-oil.com>
	  which fixes a segmentation fault in DBD::pg::blob_read() when 
	  reading LOBs that required perl to reallocate space for the 
	  variable holding the scalar value
	- updated test.pl to create a test blob larger than 256 bytes 
	  (now 128 Kbytes)
	- apply patch from Tom Lane, which fixes a seg-fault when
	  inserting large amounts of text.